Added responsive elements

--- a/Pages/wip.html
+++ b/Pages/wip.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>Work in Progress</title>
-    <link rel="stylesheet" href="../CSS/styles.css" />
+    <link rel="stylesheet" href="../CSS/wip.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Faster One:wght@400&display=swap"
